// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds editor node through constructor 1`] = `
Object {
  "id": "foo",
  "initialValueTemplates": undefined,
  "options": Object {
    "id": "docId",
    "template": undefined,
    "type": "book",
  },
  "parameters": Object {
    "foo": "bar",
  },
  "title": "some title",
  "type": "document",
}
`;

exports[`can construct using builder (alt) 1`] = `
Object {
  "id": "yeah",
  "initialValueTemplates": undefined,
  "options": Object {
    "id": "wow",
    "template": undefined,
    "type": "book",
  },
  "title": "Yeah",
  "type": "document",
}
`;

exports[`can construct using builder 1`] = `
Object {
  "id": "yeah",
  "initialValueTemplates": undefined,
  "options": Object {
    "id": "wow",
    "template": undefined,
    "type": "book",
  },
  "title": "Yeah",
  "type": "document",
}
`;

exports[`can construct with schema type instead of schema type name 1`] = `
Object {
  "id": "yeah",
  "initialValueTemplates": undefined,
  "options": Object {
    "id": "wow",
    "template": undefined,
    "type": "post",
  },
  "title": "Yeah",
  "type": "document",
}
`;
